# RestructXAI

./: .env.example  .gitignore  docker-compose.yml  nginx.conf  pyproject.toml  pyrightconfig.json
Data Harvest Final/: package-lock.json  package.json
Data Harvest Final/src/: App.tsx  index.css
Data Harvest Final/src/components/: CTASection.tsx  CapabilitiesSection.tsx  ChatInterface.tsx  Footer.tsx  HeroSection.tsx  UseCasesSection.tsx
Downloads/RestructXAI-main/: pyproject.toml
Downloads/RestructXAI-main/libs/shared-schemas/: pyproject.toml
Downloads/RestructXAI-main/libs/shared-schemas/src/shared_schemas/: __init__.py
Downloads/RestructXAI-main/services/api-gateway/: celery_app.py  pyproject.toml
Downloads/RestructXAI-main/services/api-gateway/src/api_gateway/: main.py
Downloads/RestructXAI-main/services/api-gateway/src/api_gateway/api/: __init__.py
Downloads/RestructXAI-main/services/api-gateway/src/api_gateway/api/v1/endpoints/: __init__.py  ingestion.py
Downloads/RestructXAI-main/services/api-gateway/src/api_gateway/storage/: local.py
Downloads/RestructXAI-main/services/api-gateway/src/api_gateway/tasks/: ingestion_tasks.py
Downloads/RestructXAI-main/services/ingestion/: pyproject.toml
Downloads/RestructXAI-main/services/logic-gate/: pyproject.toml
Downloads/RestructXAI-main/services/rag-orchestrator/: pyproject.toml
Downloads/RestructXAI-main/services/reasoning-engine/: pyproject.toml
apps/dashboard-ui/: package.json
core/: pyproject.toml
core/src/core/config/: settings.py
core/src/core/events/: event_bus.py  publisher.py  redis_event_bus.py
core/src/core/schemas/: events.py
frontend/: Dockerfile.dev  README.md  package.json  vite.config.ts
frontend/src/components/: APISection.tsx  ChatInterface.tsx  Header.tsx  HeroSection.tsx  ModelVariantsSection.tsx  PricingSection.tsx  TechnicalSpecsSection.tsx
frontend/src/styles/: globals.css
frontend_test/: Dockerfile  index.html  nginx.conf
libs/proto-definitions/: pyproject.toml
libs/proto-definitions/src/proto_definitions/: __init__.py
services/api-gateway/: Dockerfile  Dockerfile.v1  README.md  pyproject.toml
services/api-gateway/src/api_gateway/: main.py
services/api-gateway/src/api_gateway/api/: __init__.py
services/api-gateway/src/api_gateway/api/v1/: __init__.py
services/api-gateway/src/api_gateway/api/v1/endpoints/: __init__.py  ingestion.py  reasoning.py  vision_out.py  webhooks.py
services/api-gateway/src/api_gateway/sockets/: handlers.py  subscribers.py
services/graph-manager/: pyproject.toml
services/graph-manager/src/graph_manager/: __init__.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/ingestion/: celery_app.py
services/ingestion/src/ingestion/events/: events.py
services/ingestion/src/ingestion/tasks/: tasks.py
services/logic-gate/src/logic_gate/: __init__.py
services/med-analyzer/: pyproject.toml
services/med-analyzer/src/med_analyzer/: __init__.py
services/rag-orchestrator/src/rag_orchestrator/: __init__.py
services/reasoning-engine/: pyproject.toml
services/reasoning-engine/src/reasoning_engine/: __init__.py
services/vision-engine/: Dockerfile  Dockerfile.gpu  Dockerfile.runpod  Dockerfile.runpod.dockerignore  pyproject.toml
services/vision-engine/output/: ShreshthKatyayan_1001InternshipCompletionLetter_09-12-2025_0_res.json
services/vision-engine/src/vision_engine/: __init__.py  config.py  handler.py  main.py  schemas.py
services/vision-engine/src/vision_engine/pp_ocr/: ocr.py
services/vision-engine/src/vision_engine/pp_structure/: main.py
services/vision-engine/src/vision_engine/tasks/: functions.py  tasks.py
