[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.6.2",
  "flask>=3.1.2",
  "flask-cors>=6.0.2",
  "flask-socketio>=5.6.0",
]

[project.scripts]
api-gateway = "api_gateway.main:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
