[project]
name = "vision-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paddleocr>=3.4.0",
    "paddlepaddle-gpu>=2.6.2",
]

[project.scripts]
vision-engine = "vision_engine:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
